examples/datalog/18_advanced_patterns/23_most_common.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_mode
Knowledge graph 'test_mode' created.
Switched to knowledge graph: test_mode
> .kg use test_mode
Switched to knowledge graph: test_mode
> +values[("a",), ("b",), ("a",), ("c",), ("a",), ("b",)].
Inserted 3 fact(s) into 'values'.
> +freq(Val, <COUNT:Val>) :- values(Val).
Script error: Parse error: Invalid term: '<COUNT:Val>'
